# cs372-ufo

./: .gitignore  CMakeLists.txt  README.md  file-folder.h  open-win.cpp  retriever-win.cpp  retriever-win.h  ufo.cpp  ufo.h  ufomain.cpp  ufotests.cpp
cmake_modules/: FindSFML.cmake
docs/: .gitignore  class-structure.txt  user-stories.txt
include/: file.h  folder.h  ufo.h
our_directory_for_testing/: WMPMediaSharing.dll.mui  wmlaunch.exe.mui  wmplayer.exe.mui  wmpnetwk.exe.mui  wmpnscfg.exe.mui  wmpnssci.dll.mui  wmpnssui.dll.mui
our_directory_for_testing/folder1/: CMake-license-cygwin-exception.txt  GDB-sources.txt  libstdcxx_printers-sources.txt
src/: command.cpp  command.h  folder.cpp  ufo.cpp  ufomain.cpp
src/windows/: open-win.cpp  retriever-win.cpp  ufo-win.cpp
